--- a/RecipEase/app/build.gradle
+++ b/RecipEase/app/build.gradle
@@ -31,7 +31,10 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.ramotion.foldingcell:folding-cell:1.2.2'
 }
+
 
 
 
