--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".IngredientSelector"></activity>
     </application>
 
 </manifest>
