--- a/RecipEase/app/build.gradle
+++ b/RecipEase/app/build.gradle
@@ -34,7 +34,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.ramotion.foldingcell:folding-cell:1.2.2'
+
 }
+
 
 
 
