--- a/RecipEase/app/build.gradle
+++ b/RecipEase/app/build.gradle
@@ -36,8 +36,11 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.ramotion.foldingcell:folding-cell:1.2.2'
+    compile 'org.apache.commons:commons-collections4:4.1'
+
 
 }
+
 
 
 
