--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".IngredientSelector"></activity>
+        <activity android:name=".IngredientSelector" />
+        <activity android:name=".IngredientSelectorTest"></activity>
     </application>
 
 </manifest>
