fixed xml issue with method

--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".IngredientSelector" />
         <activity
+            android:name=".AboutActivity"
+            android:label="AboutActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".CreateRecipeActivity"
             android:label="@string/title_activity_create_recipe"
             android:theme="@style/AppTheme.NoActionBar"></activity>
