Added user profile GUI
User can edit their profile

--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
         <activity
             android:name=".CreateRecipeActivity"
             android:label="@string/title_activity_create_recipe"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ProfileActivity"
+            android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
