Create Recipe has Ingredient Search + user can view their Personal Recipes
Create Recipe has ingredients from the database. Create Recipe button cannot be spammed, preventing multiple uploads of the same recipe. Intent takes you home if successful upload. Menu now has Personal Recipes tab with user's created recipes.

--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:name=".ProfileActivity"
             android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".PersonalRecipesActivity"
+            android:label="PersonalRecipesActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
