--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:name=".ProfileActivity"
             android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".DrawerActivity"></activity>
+        <activity android:name=".DrawerActivity" />
     </application>
 
 </manifest>
