--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.ActionBarNoTitle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,33 +24,43 @@
         <activity
             android:name=".BrowseRecipesActivity"
             android:label="@string/title_activity_browse_recipes"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".RecipeDetailsActivity" />
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
+        <activity
+            android:name=".RecipeDetailsActivity"
+            android:label="RecipeDetailsActivity"
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
         <activity
             android:name=".HomeActivity"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".IngredientSelector" />
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
+        <activity
+            android:name=".IngredientSelector"
+            android:label="IngredientSelector"
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
         <activity
             android:name=".AboutActivity"
             android:label="AboutActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
         <activity
             android:name=".CreateRecipeActivity"
             android:label="@string/title_activity_create_recipe"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
         <activity
             android:name=".ProfileActivity"
             android:label="@string/title_activity_profile"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
         <activity
             android:name=".PersonalRecipesActivity"
             android:label="PersonalRecipesActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
+        <activity
+            android:name=".AnimationActivity"
+            android:label="AnimationActivity"
+            android:theme="@style/AppTheme.ActionBarNoTitle" />
         <activity android:name=".DrawerActivity" />
     </application>
 
