--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,6 +47,9 @@
         <activity
             android:name=".PersonalRecipesActivity"
             android:label="@string/title_activity_personal_recipes" />
+        <activity
+            android:name=".BrowseFavoritesActivity"
+            android:label="@string/title_activity_favorite_recipes" />
         <activity
             android:name=".AnimationActivity"
             android:label="@string/title_activity_animation" />
