fixed pull request

--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -51,6 +51,7 @@
             android:name=".AnimationActivity"
             android:label="@string/title_activity_animation" />
         <activity android:name=".DrawerActivity" />
+        <activity android:name=".TrendingRecipes"></activity>
     </application>
 
 </manifest>
