--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -50,11 +50,13 @@
         <activity
             android:name=".BrowseFavoritesActivity"
             android:label="@string/title_activity_favorite_recipes" />
+        <activity android:name=".TrendingRecipes"
+            android:label="@string/title_activity_trending"/>
         <activity
             android:name=".AnimationActivity"
             android:label="@string/title_activity_animation" />
         <activity android:name=".DrawerActivity" />
-        <activity android:name=".TrendingRecipes"></activity>
+
     </application>
 
 </manifest>
