Search for Recipe by name
New activity that can be accessed from drawer. On startup it loads all recipes from database, then user can search for recipes by name.

--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -65,6 +65,9 @@
         <activity android:name=".TrendingRecipes"
             android:screenOrientation="portrait"
             android:label="@string/title_activity_trending"/>
+        <activity android:name=".SearchRecipesActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_search_recipes"/>
         <activity
             android:name=".AnimationActivity"
             android:screenOrientation="portrait"
