Users can share recipes from the recipe details page, and recipients can click the link to open the recipe in the app

--- a/RecipEase/app/src/main/AndroidManifest.xml
+++ b/RecipEase/app/src/main/AndroidManifest.xml
@@ -21,6 +21,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="http"
+                    android:host="www.recipease.com"
+                    android:pathPrefix="/recipe"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".BrowseRecipesActivity"
