--- a/RecipEase/app/build.gradle
+++ b/RecipEase/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'org.apache.commons:commons-collections4:4.1'
+    compile 'io.branch.sdk.android:library:2.+'
 
 }
 
